# aws-tui

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .taplo.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
docs/: RELEASING.md  adding-a-service.md  architecture.md  connections.md  contract-ledger.md  cookbook.md  homebrew-bootstrap.md  index.md  keybindings.md  manifest.yaml  platforms.md  recording-todo.md  theming.md
docs/diagrams/: architecture.html
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/superpowers/notes/: 2026-06-14-vmx-python-cheatsheet.md  2026-07-10-three-surface-docs-phase2-runbook.md
docs/superpowers/plans/: 2026-06-14-aws-tui-bootstrap-m0.md  2026-06-14-aws-tui-domain-m2.md  2026-06-14-aws-tui-infrastructure-m1.md  2026-06-14-aws-tui-polish-m6.md  2026-06-14-aws-tui-ui-themes-m5.md  2026-06-14-aws-tui-vm-filemgr-m4.md  2026-06-14-aws-tui-vm-shell-m3.md  2026-06-17-vmx-pypi-migration.md  2026-06-19-graceful-unreachable-connections.md  2026-06-19-modal-toast-polish.md  2026-06-20-app-settings-shell-and-s3-panel.md  2026-06-20-settings-as-first-class-nav-page.md  2026-06-24-notification-consistency.md  2026-06-25-emr-serverless-pr-a.md  2026-06-26-emr-job-run-logs-pane.md  2026-06-28-cross-platform-readiness.md  2026-06-28-demo-mode.md  2026-07-02-vmx-3-1-remaining-adoption.md  2026-07-02-vmx-formvm-s3-settings.md  2026-07-10-three-surface-docs.md  2026-07-21-binding-resolver-keystone.md  2026-07-21-quick-look-wiring.md  README.md
docs/superpowers/specs/: 2026-06-13-aws-tui-design.md  2026-06-19-graceful-unreachable-connections.md  2026-06-19-modal-toast-polish-design.md  2026-06-20-app-settings-shell-and-s3-panel-design.md  2026-06-20-settings-as-first-class-nav-page-design.md  2026-06-25-emr-serverless-service-design.md  2026-06-27-public-release-pipeline-design.md  2026-06-28-cross-platform-readiness-design.md  2026-06-28-demo-mode-design.md  2026-06-28-vmx-toolkit-adoption-design.md  2026-06-28-vmx-upstream-vnext-asks.md  2026-07-02-vmx-3-1-adoption-audit.md  2026-07-10-three-surface-docs-design.md  2026-07-21-binding-resolver-keystone-design.md  2026-07-21-command-palette-wiring-design.md  2026-07-21-quick-look-wiring-design.md
scripts/: bootstrap.sh  check-layers.sh  cut-changelog.sh  dev.sh  run-with-uv.sh
scripts/docs/: __init__.py  build_docs.py  check_docs.py  links.py  manifest.py  push_wiki.py  render_diagrams.py  transforms.py
scripts/test-services/: README.md
scripts/test-services/s3/: config-snippet.toml  docker-compose.yml  down.sh  seed.py  up.sh
src/aws_tui/: __init__.py  __main__.py  app.py  composition.py  version.py
src/aws_tui/demo/: __init__.py  connections.py  in_memory_emr.py  in_memory_fs.py  seeds.py
src/aws_tui/domain/: __init__.py  cross_fs.py  emr_logs.py  emr_serverless.py  filesystem.py  local_fs.py  s3_fs.py  transfer_journal.py
src/aws_tui/infra/: __init__.py  aws_session.py  config_store.py  connection_resolver.py  crash_dump.py  keychain.py  keymap_store.py  log_sink.py  paths.py  redaction.py  theme_store.py
src/aws_tui/services/: __init__.py
src/aws_tui/ui/: __init__.py  actions.py  bindings.py  notifications.py
src/aws_tui/vm/: __init__.py  content_host_vm.py  messages.py  nav_menu_vm.py  root_vm.py  services_menu_vm.py  services_protocol.py
tests/: conftest.py
tests/docs/: test_build_docs.py  test_check_docs.py  test_links.py  test_manifest.py  test_push_wiki.py  test_render_diagrams.py  test_scaffolding.py  test_transforms.py
tests/e2e/: __init__.py  conftest.py  test_journeys.py
tests/integration/: __init__.py  conftest.py  test_aws_profile_env.py  test_bug_train_acceptance.py  test_chrome_and_hint_legend.py  test_command_palette_wiring.py  test_confirm_modal_keyboard.py  test_copy_delete_actions.py  test_cross_fs_minio.py  test_demo_mode.py  test_emr_page.py  test_keybinding_wiring.py  test_modifier_click_multiselect.py  test_pane_loading_smoke.py  test_pane_source_swap.py  test_quick_look_wiring.py  test_s3_focus_cycle.py  test_s3_fs_minio.py  test_services_collapse.py  test_settings_flow.py  test_settings_modal_flow.py  test_swap_source_recovery.py  test_swap_source_skips_unreachable.py  test_theme_picker_keyboard.py  test_theme_runtime_propagation.py
tests/snapshot/: __init__.py  conftest.py  test_demo_mode.py  test_emr.py  test_emr_clone_modal.py  test_emr_logs.py  test_main_screen.py  test_modals.py  test_nav_menu.py  test_pane_states.py  test_s3_compat_form.py  test_services_menu_footer.py  test_settings_modal.py  test_settings_view.py  test_theme_picker.py  test_toast.py  test_transfers.py
tests/snapshot/apps/: __init__.py  _seed.py  demo_mode.py  emr.py  emr_clone_modal.py  emr_logs.py  main_screen.py  modals.py  nav_menu.py  pane_states.py  s3_compat_form.py  services_menu_footer.py  settings.py  (+4 more)
tests/unit/: test_app_boot_chain.py  test_app_context_unreachable.py  test_app_sanity.py  test_composition_emr_registered.py  test_composition_first_run.py  test_composition_initial_theme.py  test_composition_resume.py  test_cut_changelog.py  test_notifications.py  test_quick_look_content.py  test_script_guards.py  test_workflow_guards.py
(+543 files in other folders)
