[build-system]
requires = ["hatchling>=1.21,<2"]
build-backend = "hatchling.build"

[project]
name = "aws-tui"
description = "Cross-platform TUI for AWS and S3-compatible services. Powered by Textual + VMx MVVM."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
requires-python = ">=3.11"
keywords = [
  "aws",
  "tui",
  "s3",
  "minio",
  "textual",
  "mvvm",
  "python",
  "macos",
  "linux",
  "windows",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
  "Topic :: Terminals",
  "Typing :: Typed",
]
dependencies = [
  # Upper bounds match the vmx posture — next-major caps insulate
  # downstream `pip install aws-tui` from a transitive breaking
  # change between releases. Bump deliberately, not by accident.
  "vmx>=2.6.0,<3.0.0",
  "textual>=0.79,<9",
  "boto3>=1.34,<2",
  "aioboto3>=13,<16",
  "botocore>=1.34,<2",
  "anyio>=4,<5",
  "aiofiles>=23,<26",
  "tomli-w>=1.0,<2",
  "keyring>=24,<26",
  "platformdirs>=4,<5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/thekaveh/aws-tui"
Repository = "https://github.com/thekaveh/aws-tui"
Issues = "https://github.com/thekaveh/aws-tui/issues"
Changelog = "https://github.com/thekaveh/aws-tui/blob/main/CHANGELOG.md"

[project.scripts]
aws-tui = "aws_tui.app:main"

[tool.hatch.version]
path = "src/aws_tui/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_tui"]

[dependency-groups]
dev = [
  # Deliberately uncapped on the upper side. Unlike the runtime
  # dependencies above, dev tooling does NOT ship to downstream
  # `pip install aws-tui` — uv.lock is the reproducibility floor
  # here, and capping next-major would actively roll back working
  # versions when uv has already moved to them (e.g. mypy 2.x,
  # pytest 9.x, pre-commit 9.x in the resolved lock).
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4",
  "pytest-xdist>=3",
  "pytest-textual-snapshot>=1",
  "moto[server,s3]>=5",
  "testcontainers[minio]>=4",
  "types-aiofiles>=23",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.5",
  "twine>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
  # Tagged via ``pytestmark = pytest.mark.unit`` in 6 files under
  # tests/unit/domain/ — descriptive only; the default run already
  # includes everything except ``-m 'not integration'``.
  "unit: pure-Python tests, no external service (run by default)",
  # Opt-in marker for tests that spin up a real testcontainer (MinIO).
  # Excluded from the default ``uv run pytest`` via the ``addopts``
  # filter above; opt in with ``-m integration``. Applied via
  # ``pytestmark = pytest.mark.integration`` in
  # tests/integration/{test_cross_fs_minio,test_s3_fs_minio}.py. Fast
  # in-process tests under tests/integration/ (full-app pilot, modal
  # forwarding, etc.) intentionally don't carry this marker — they run
  # by default.
  "integration: tests that spin up a testcontainer or external service",
  # Tagged on every test function in tests/e2e/test_journeys.py.
  # Descriptive only; runs by default.
  "e2e: end-to-end app-level pilot journeys (run by default)",
]

[tool.coverage.run]
branch = true
source = ["src/aws_tui"]
omit = ["src/aws_tui/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",   # pycodestyle + pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "TID", # tidy-imports (layer enforcement)
  "RUF", # ruff-specific
  "SIM", # simplify
  "PT",  # pytest style
  "PTH", # pathlib usage
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "S101"]

# Layer enforcement (View → VM → Service → Domain → Infra) via
# flake8-tidy-imports is wired in M1, once real cross-layer imports
# appear. No placeholder block here — ruff's TOML schema rejects an
# empty [tool.ruff.lint.flake8-tidy-imports.*] table.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
files = ["src/aws_tui"]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict_optional = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party libs without type stubs. We rely on local boundary tests +
# layer rules to keep their usage contained.
module = ["aioboto3", "aioboto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
